--- a/src/app/components/game-template/game-template.component.css
+++ b/src/app/components/game-template/game-template.component.css
@@ -3,7 +3,7 @@
   width: 70%;
   position: relative;
   overflow: auto;
-  margin: 40px auto;
+  margin: 40px auto ;
   
 }
 .btns{
@@ -174,6 +174,7 @@ height: 100%;
 @media screen and (max-width: 480px) {
   .game-bg{
     width: 100%;
+    margin-bottom: 0;
   }
   .icon-btn {
     font-size: 1.5rem;
